--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc:
-  bloc:
-  chopper: ^3.0.2
+  flutter_bloc: ^7.0.0
+  bloc: ^7.0.0
+  chopper: ^3.0.6
   location: ^4.1.1
-  equatable:
-  logging:
-  intl:
-  charcode:
+  equatable: ^2.0.0
+  logging: ^0.11.4
+  intl: ^0.17.0
+  charcode: ^1.2.0
   overlay_support: ^1.2.0
   settings_ui: ^1.0.0
 
@@ -42,8 +42,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner:
-  chopper_generator:
+  build_runner: ^1.11.5
+  chopper_generator: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
