--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,9 +27,9 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-    <string>Permission to access your location</string>
-     <key>NSLocationAlwaysUsageDescription</key>
-     <string>Permission to access your location</string>
+    <string>This app needs access to location when open.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app needs access to location when in the background.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
