--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,18 +26,20 @@ dependencies:
   flutter_bloc: ^7.0.0
   bloc: ^7.0.0
   chopper: ^3.0.6
-  location: ^4.1.1
   equatable: ^2.0.0
   logging: ^0.11.4
   intl: ^0.17.0
   charcode: ^1.2.0
   overlay_support: ^1.2.0
   settings_ui: ^1.0.0
+  shared_preferences:
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  location: ^4.0.0
+  permission_handler: ^6.1.3
 
 dev_dependencies:
   flutter_test:
