--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  location: ^4.0.0
+  location: ^4.1.1
   permission_handler: ^6.1.3
+  background_location: ^0.4.3
 
 dev_dependencies:
   flutter_test:
